# legacy-polymost

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  ConnectCommand.cpp  ConnectCommand.h  Dependencies.md  PolyMost.cpp  PolyMost.h  jsoncreate.cmake  mattermost.proto  polymost.proto  shared.cmake  static.cmake  xmlcreate.cmake
resources/: plugin.json  plugin.xml
src/: ConnectCommand.cpp  MattermostAccount.cpp  MattermostAccountSession.cpp  MattermostAccountSession.h  PolyMost.cpp  PolyMost.h  PolyMostCommand.cpp
src/headers/: ConnectCommand.h  MattermostAccount.h  MattermostServer.h  MattermostUser.h  PolyMost.h  PolyMostCommand.h
